fixed alignment of active card thing.

--- a/css/style.css
+++ b/css/style.css
@@ -696,7 +696,7 @@ main {
 
 .card-case.expand{
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     left: 0;
     top: 0;
@@ -706,8 +706,8 @@ main {
 
 .project-container.expand .project-card-case.expand{
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: inherit;
     left: 0;
     top: 0;
     z-index: 402;
@@ -1101,9 +1101,9 @@ footer{
 }
 
 @media only screen and (max-width: 991px){
-    *{
-        /* outline: 3px solid red !important; */
-    }
+    /* *{
+        outline: 3px solid red !important;
+    } */
     
     nav{
         display: flex;
@@ -1243,6 +1243,10 @@ footer{
         padding: 5px;
         text-align: left;
         width: 300px;
+    }
+
+    .card.active{
+        transform: translateY(20px);
     }
 
     footer p{
